--- a/commonNumbers/Dockerfile
+++ b/commonNumbers/Dockerfile
@@ -1,14 +1,17 @@
 FROM golang:latest as build
-# Copy project directory to app
-COPY . /app
+# Disable CGO for not using dynamic libs
+ENV CGO_ENABLED=0
+# Set go workdir
+WORKDIR /go/src/app/
+# Copy project directory to /go/src/app/
+COPY . .
 # build project
 RUN go build
-FROM scratch AS release
+FROM alpine:latest AS release
 # Copy binary to app folder in release
-COPY --from=build app/commonNumbers /app/commonNumbers
+COPY --from=build /go/src/app/commonNumbers /app/commonNumbers
 # Set user and port
 USER 9999:999
 EXPOSE 8080
 # Execute commonNumbers on start
 ENTRYPOINT ["/app/commonNumbers"]
-
